# ME597AS

./: .bashrc  .gitignore
final/: Final_presentation_guidline.pptx  task1.py  task2 new.py  task2.py  task3.py
final project/: task1.py
final/labs/: image_publisher.py
final/src/turtlebot3_gazebo/rviz/: tb3_gazebo.rviz
final/src/turtlebot3_gazebo/src/lab4/: task1.py  task2.py
final/turtlebot3_gazebo/maps/: map.pgm  map.yaml
final/turtlebot3_gazebo/src/lab4/: task1.py  task2.py  task2_bonus.py  task3.py
final/turtlebot3_gazebo/src/lab4/rishi/: task2.py  (+1 more)
lab1/task_1/: package.xml  setup.py
lab1/task_1/launch/: pub_sub_launch.py
lab1/task_1/task_1/: publisher.py  subscriber.py
lab1/task_2/: package.xml  setup.py
lab1/task_2/launch/: service_launch.py
lab1/task_2/task_2/: joint_client.py  joint_service.py  publisher.py  subscriber.py
lab1/task_2_interfaces/: CMakeLists.txt  package.xml
lab2/task_3/: package.xml  setup.py
lab2/task_3/launch/: pid_control_launch.py
lab2/task_3/task_3/: pid_controller.py
lab3/: lab3_old.webm  navigation_astar_f24.ipynb
lab3/task_4/: package.xml  setup.py
lab3/task_4/launch/: gen_sync_map_launch.py
lab3/task_4/maps/: classroom_map.pgm  classroom_map.yaml  sync_classroom_map.pgm  sync_classroom_map.yaml
lab3/task_4/task_4/: auto_navigator.py  navigation_astar_f24.ipynb  navigation_astar_f24.py
lab4/task_5/: package.xml  setup.py
lab4/task_5/launch/: object_detector_launch.py
lab4/task_5/task_5/: object_detector.py
lab4/task_6/: package.xml  setup.py
lab4/task_6/task_6/: red_ball_tracker.py
(+5 files in other folders)
