<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>task_4</name>
  <version>0.0.0</version>
  <description>Lab 3: Navigation</description>
  <maintainer email="algunda@purdue.edu">algunda</maintainer>
  <license>Apache-2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>ament_index_python</exec_depend>
  <!-- <exec_depend>pandas</exec_depend>
  <exec_depend>numpy</exec_depend>
  <exec_depend>matplotlib</exec_depend>
  <exec_depend>yaml</exec_depend>
  <exec_depend>PIL</exec_depend>
  <exec_depend>graphviz</exec_depend>
  <exec_depend>heapq</exec_depend> -->

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
